fix: Use .nojekyll file to prevent jekyll
Signed-off-by: Joern Bernhardt <joern.bernhardt@googlemail.com>

--- a/.github/workflows/build-static-page.yml
+++ b/.github/workflows/build-static-page.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Build 🛠
         run: |
           pnpm run build
+          touch build/.nojekyll
 
       - uses: actions/configure-pages@v4
 
